rerun train module

--- a/2.train_model/train_model.ipynb
+++ b/2.train_model/train_model.ipynb
@@ -237,30 +237,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2910</th>\n",
-       "      <td>OutOfFocus</td>\n",
-       "      <td>731</td>\n",
-       "      <td>916</td>\n",
-       "      <td>LT0601_01</td>\n",
-       "      <td>217</td>\n",
-       "      <td>1</td>\n",
-       "      <td>49</td>\n",
-       "      <td>LT0601_01_217</td>\n",
-       "      <td>LT0601_01/LT0601_01_217_49.tif</td>\n",
-       "      <td>ABCB8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.735633</td>\n",
-       "      <td>4.865380</td>\n",
-       "      <td>5.707014</td>\n",
-       "      <td>-1.089747</td>\n",
-       "      <td>-1.021088</td>\n",
-       "      <td>-1.548589</td>\n",
-       "      <td>-2.062805</td>\n",
-       "      <td>-0.590612</td>\n",
-       "      <td>0.520789</td>\n",
-       "      <td>-0.067719</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2911</th>\n",
        "      <td>OutOfFocus</td>\n",
        "      <td>383</td>\n",
@@ -333,6 +309,30 @@
        "      <td>1.657651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2914</th>\n",
+       "      <td>OutOfFocus</td>\n",
+       "      <td>946</td>\n",
+       "      <td>281</td>\n",
+       "      <td>LT0603_03</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49</td>\n",
+       "      <td>LT0603_03_2</td>\n",
+       "      <td>LT0603_03/LT0603_03_2_49.tif</td>\n",
+       "      <td>failed QC</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.023441</td>\n",
+       "      <td>11.088221</td>\n",
+       "      <td>2.068912</td>\n",
+       "      <td>-0.977407</td>\n",
+       "      <td>-1.108647</td>\n",
+       "      <td>-1.399433</td>\n",
+       "      <td>-2.744383</td>\n",
+       "      <td>-2.037700</td>\n",
+       "      <td>0.667556</td>\n",
+       "      <td>2.438798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2915</th>\n",
        "      <td>OutOfFocus</td>\n",
        "      <td>999</td>\n",
@@ -369,10 +369,10 @@
        "3                         Large                932                532   \n",
        "4                         Large                477                130   \n",
        "...                         ...                ...                ...   \n",
-       "2910                 OutOfFocus                731                916   \n",
        "2911                 OutOfFocus                383                219   \n",
        "2912                 OutOfFocus                975                294   \n",
        "2913                 OutOfFocus                898                302   \n",
+       "2914                 OutOfFocus                946                281   \n",
        "2915                 OutOfFocus                999                421   \n",
        "\n",
        "     Metadata_Plate  Metadata_Well  Metadata_Site  Metadata_Frame  \\\n",
@@ -382,10 +382,10 @@
        "3         LT0013_38             42              1              75   \n",
        "4         LT0013_38             42              1              75   \n",
        "...             ...            ...            ...             ...   \n",
-       "2910      LT0601_01            217              1              49   \n",
        "2911      LT0601_01            217              1              49   \n",
        "2912      LT0603_03              2              1              49   \n",
        "2913      LT0603_03              2              1              49   \n",
+       "2914      LT0603_03              2              1              49   \n",
        "2915      LT0603_03              2              1              49   \n",
        "\n",
        "     Metadata_Plate_Map_Name                    Metadata_DNA Metadata_Gene  \\\n",
@@ -395,10 +395,10 @@
        "3               LT0013_38_42   LT0013_38/LT0013_38_42_75.tif         KIF14   \n",
        "4               LT0013_38_42   LT0013_38/LT0013_38_42_75.tif         KIF14   \n",
        "...                      ...                             ...           ...   \n",
-       "2910           LT0601_01_217  LT0601_01/LT0601_01_217_49.tif         ABCB8   \n",
        "2911           LT0601_01_217  LT0601_01/LT0601_01_217_49.tif         ABCB8   \n",
        "2912             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
        "2913             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
+       "2914             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
        "2915             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
        "\n",
        "      ...  DP__efficientnet_1270  DP__efficientnet_1271  \\\n",
@@ -408,10 +408,10 @@
        "3     ...              -1.001625              -0.801021   \n",
        "4     ...               0.950706              -0.811825   \n",
        "...   ...                    ...                    ...   \n",
-       "2910  ...              -0.735633               4.865380   \n",
        "2911  ...               0.549654               8.142944   \n",
        "2912  ...               0.358861               6.294227   \n",
        "2913  ...               0.570003              10.106912   \n",
+       "2914  ...              -0.023441              11.088221   \n",
        "2915  ...               1.051668               8.116682   \n",
        "\n",
        "      DP__efficientnet_1272  DP__efficientnet_1273  DP__efficientnet_1274  \\\n",
@@ -421,10 +421,10 @@
        "3                 -0.586539               0.076197               0.599191   \n",
        "4                 -0.522427              -1.402842              -0.289940   \n",
        "...                     ...                    ...                    ...   \n",
-       "2910               5.707014              -1.089747              -1.021088   \n",
        "2911               1.619399              -1.521878              -0.182734   \n",
        "2912               1.827482              -0.997080              -0.614779   \n",
        "2913               1.130243              -1.288302              -0.956321   \n",
+       "2914               2.068912              -0.977407              -1.108647   \n",
        "2915               2.235983              -1.145331              -0.432250   \n",
        "\n",
        "      DP__efficientnet_1275  DP__efficientnet_1276  DP__efficientnet_1277  \\\n",
@@ -434,10 +434,10 @@
        "3                  1.742090               0.365520               0.643759   \n",
        "4                  2.661250               0.126978              -0.824945   \n",
        "...                     ...                    ...                    ...   \n",
-       "2910              -1.548589              -2.062805              -0.590612   \n",
        "2911              -1.608294              -0.783477              -2.613400   \n",
        "2912              -1.270435              -1.335869              -0.560155   \n",
        "2913              -1.409762              -0.058448              -0.025529   \n",
+       "2914              -1.399433              -2.744383              -2.037700   \n",
        "2915              -1.437098               0.297237              -0.574826   \n",
        "\n",
        "      DP__efficientnet_1278  DP__efficientnet_1279  \n",
@@ -447,10 +447,10 @@
        "3                 -1.906097               1.019370  \n",
        "4                 -0.494285               1.763332  \n",
        "...                     ...                    ...  \n",
-       "2910               0.520789              -0.067719  \n",
        "2911               0.442609               1.977761  \n",
        "2912               0.836314               3.473351  \n",
        "2913               0.628679               1.657651  \n",
+       "2914               0.667556               2.438798  \n",
        "2915               1.004447               1.320133  \n",
        "\n",
        "[2432 rows x 1456 columns]"
@@ -472,9 +472,11 @@
     "data_split_path = pathlib.Path(f\"../1.split_data/indexes/data_split_indexes.tsv\")\n",
     "features_dataframe_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
     "\n",
+    "# dataframe with only the labeled data we want (exclude certain phenotypic classes)\n",
     "features_dataframe = get_features_data(features_dataframe_path)\n",
     "data_split_indexes = pd.read_csv(data_split_path, sep=\"\\t\", index_col=0)\n",
     "\n",
+    "# get training data from labeled data\n",
     "training_data = get_dataset(features_dataframe, data_split_indexes, \"train\")\n",
     "training_data"
    ]
@@ -491,38 +493,38 @@
       "Training final model on CP features...\n",
       "X has shape (2432, 165), y has shape (2432,)\n",
       "Parameters being tested: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
-      "Best parameters: {'C': 1.0, 'l1_ratio': 0.1}\n",
-      "Score of best estimator: 0.8133006945383453\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.30000000000000004}\n",
+      "Score of best estimator: 0.8160827228903825\n",
       "\n",
       "Training final model on DP features...\n",
       "X has shape (2432, 1280), y has shape (2432,)\n",
       "Parameters being tested: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
-      "Best parameters: {'C': 0.01, 'l1_ratio': 0.0}\n",
-      "Score of best estimator: 0.7254961296983645\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
+      "Score of best estimator: 0.7383705853823289\n",
       "\n",
       "Training final model on CP_and_DP features...\n",
       "X has shape (2432, 1445), y has shape (2432,)\n",
       "Parameters being tested: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
-      "Best parameters: {'C': 0.1, 'l1_ratio': 0.5}\n",
-      "Score of best estimator: 0.8305485972906134\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.30000000000000004}\n",
+      "Score of best estimator: 0.8356118079369516\n",
       "\n",
       "Training shuffled_baseline model on CP features...\n",
       "X has shape (2432, 165), y has shape (2432,)\n",
       "Parameters being tested: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
       "Best parameters: {'C': 0.01, 'l1_ratio': 0.0}\n",
-      "Score of best estimator: 0.08772665239916516\n",
+      "Score of best estimator: 0.10215136994867735\n",
       "\n",
       "Training shuffled_baseline model on DP features...\n",
       "X has shape (2432, 1280), y has shape (2432,)\n",
       "Parameters being tested: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
-      "Best parameters: {'C': 0.01, 'l1_ratio': 0.0}\n",
-      "Score of best estimator: 0.09858232980987658\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.0943542807030858\n",
       "\n",
       "Training shuffled_baseline model on CP_and_DP features...\n",
       "X has shape (2432, 1445), y has shape (2432,)\n",
       "Parameters being tested: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
-      "Best parameters: {'C': 0.1, 'l1_ratio': 0.0}\n",
-      "Score of best estimator: 0.09082803446929595\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.9}\n",
+      "Score of best estimator: 0.09320506604460571\n",
       "\n"
      ]
     }
@@ -531,13 +533,13 @@
     "model_types = [\"final\",\"shuffled_baseline\"]\n",
     "feature_types = [\"CP\",\"DP\",\"CP_and_DP\"]\n",
     "\n",
+    "# train model for each combination of model type and feature type\n",
     "for model_type in model_types:\n",
     "    for feature_type in feature_types:\n",
     "        print(f\"Training {model_type} model on {feature_type} features...\")\n",
-    "                \n",
+    "        \n",
     "        X, y = get_X_y_data(training_data, feature_type)\n",
     "        print(f\"X has shape {X.shape}, y has shape {y.shape}\")\n",
-    "        \n",
     "        \n",
     "        # shuffle columns of X (features) dataframe independently to create shuffled baseline\n",
     "        if model_type == \"shuffled_baseline\":\n",
@@ -559,16 +561,19 @@
     "            log_reg_model, parameters, cv=straified_k_folds, n_jobs=-1, scoring=\"f1_weighted\",\n",
     "        )\n",
     "        \n",
+    "        # capture convergence warning from sklearn\n",
+    "        # this warning does not affect the model but takes up lots of space in the output\n",
     "        with parallel_backend(\"multiprocessing\"):\n",
     "            with warnings.catch_warnings():\n",
     "                warnings.filterwarnings(\"ignore\", category=ConvergenceWarning, module=\"sklearn\")\n",
     "                grid_search_cv = grid_search_cv.fit(X, y)\n",
     "        \n",
+    "        # print info for best estimator\n",
     "        print(f\"Best parameters: {grid_search_cv.best_params_}\")\n",
     "        print(f\"Score of best estimator: {grid_search_cv.best_score_}\\n\")\n",
     "        \n",
     "        # save final estimator\n",
-    "        dump(grid_search_cv.best_estimator_, f\"{results_dir}/{model_type}_{feature_type}.joblib\")"
+    "        dump(grid_search_cv.best_estimator_, f\"{results_dir}/{model_type}__{feature_type}.joblib\")"
    ]
   }
  ],
