--- a/2.train_model/train_model.ipynb
+++ b/2.train_model/train_model.ipynb
@@ -24,12 +24,12 @@
     "    StratifiedKFold,\n",
     "    GridSearchCV,\n",
     ")\n",
-    "from sklearn.utils import shuffle\n",
+    "from sklearn.utils import shuffle, parallel_backend\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
-    "from sklearn.utils import parallel_backend\n",
     "from joblib import dump\n",
     "\n",
     "import sys\n",
+    "\n",
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
     "from train_utils import get_dataset, get_X_y_data"
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load training data and create stratified folds for cross validation"
+    "### Specify results directory, load training data"
    ]
   },
   {
@@ -465,6 +465,7 @@
     "# set numpy seed to make random operations reproduceable\n",
     "np.random.seed(0)\n",
     "\n",
+    "# create results directory\n",
     "results_dir = pathlib.Path(\"models/\")\n",
     "results_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
@@ -479,6 +480,13 @@
     "# get training data from labeled data\n",
     "training_data = get_dataset(features_dataframe, data_split_indexes, \"train\")\n",
     "training_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train model on each combination of model type and feature type"
    ]
   },
   {
@@ -530,50 +538,59 @@
     }
    ],
    "source": [
-    "model_types = [\"final\",\"shuffled_baseline\"]\n",
-    "feature_types = [\"CP\",\"DP\",\"CP_and_DP\"]\n",
+    "model_types = [\"final\", \"shuffled_baseline\"]\n",
+    "feature_types = [\"CP\", \"DP\", \"CP_and_DP\"]\n",
     "\n",
-    "# train model for each combination of model type and feature type\n",
+    "# train model on each combination of model type and feature type\n",
     "for model_type in model_types:\n",
     "    for feature_type in feature_types:\n",
     "        print(f\"Training {model_type} model on {feature_type} features...\")\n",
-    "        \n",
+    "\n",
     "        X, y = get_X_y_data(training_data, feature_type)\n",
     "        print(f\"X has shape {X.shape}, y has shape {y.shape}\")\n",
-    "        \n",
+    "\n",
     "        # shuffle columns of X (features) dataframe independently to create shuffled baseline\n",
     "        if model_type == \"shuffled_baseline\":\n",
     "            for column in X.T:\n",
     "                np.random.shuffle(column)\n",
-    "        \n",
+    "\n",
     "        # create stratified data sets for k-fold cross validation\n",
     "        straified_k_folds = StratifiedKFold(n_splits=10, shuffle=False)\n",
-    "        \n",
+    "\n",
     "        # create logistic regression model with following parameters\n",
     "        log_reg_model = LogisticRegression(\n",
     "            penalty=\"elasticnet\", solver=\"saga\", max_iter=100, n_jobs=-1, random_state=0\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        # hypertune parameters with GridSearchCV\n",
     "        parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
     "        print(f\"Parameters being tested: {parameters}\")\n",
     "        grid_search_cv = GridSearchCV(\n",
-    "            log_reg_model, parameters, cv=straified_k_folds, n_jobs=-1, scoring=\"f1_weighted\",\n",
+    "            log_reg_model,\n",
+    "            parameters,\n",
+    "            cv=straified_k_folds,\n",
+    "            n_jobs=-1,\n",
+    "            scoring=\"f1_weighted\",\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        # capture convergence warning from sklearn\n",
     "        # this warning does not affect the model but takes up lots of space in the output\n",
     "        with parallel_backend(\"multiprocessing\"):\n",
     "            with warnings.catch_warnings():\n",
-    "                warnings.filterwarnings(\"ignore\", category=ConvergenceWarning, module=\"sklearn\")\n",
+    "                warnings.filterwarnings(\n",
+    "                    \"ignore\", category=ConvergenceWarning, module=\"sklearn\"\n",
+    "                )\n",
     "                grid_search_cv = grid_search_cv.fit(X, y)\n",
-    "        \n",
+    "\n",
     "        # print info for best estimator\n",
     "        print(f\"Best parameters: {grid_search_cv.best_params_}\")\n",
     "        print(f\"Score of best estimator: {grid_search_cv.best_score_}\\n\")\n",
-    "        \n",
+    "\n",
     "        # save final estimator\n",
-    "        dump(grid_search_cv.best_estimator_, f\"{results_dir}/{model_type}__{feature_type}.joblib\")"
+    "        dump(\n",
+    "            grid_search_cv.best_estimator_,\n",
+    "            f\"{results_dir}/{model_type}__{feature_type}.joblib\",\n",
+    "        )"
    ]
   }
  ],
