--- a/2.train_model/train_model.ipynb
+++ b/2.train_model/train_model.ipynb
@@ -538,8 +538,30 @@
     }
    ],
    "source": [
+    "# specify model types and feature types\n",
     "model_types = [\"final\", \"shuffled_baseline\"]\n",
     "feature_types = [\"CP\", \"DP\", \"CP_and_DP\"]\n",
+    "\n",
+    "# create stratified data sets for k-fold cross validation\n",
+    "straified_k_folds = StratifiedKFold(n_splits=10, shuffle=False)\n",
+    "\n",
+    "# create logistic regression model with following parameters\n",
+    "log_reg_model = LogisticRegression(\n",
+    "    penalty=\"elasticnet\", solver=\"saga\", max_iter=100, n_jobs=-1, random_state=0\n",
+    ")\n",
+    "\n",
+    "# specify parameters to tune for\n",
+    "parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
+    "print(f\"Parameters being tested during grid search: {parameters}\\n\")\n",
+    "\n",
+    "# create grid search with cross validation with hypertuning params\n",
+    "grid_search_cv = GridSearchCV(\n",
+    "    log_reg_model,\n",
+    "    parameters,\n",
+    "    cv=straified_k_folds,\n",
+    "    n_jobs=-1,\n",
+    "    scoring=\"f1_weighted\",\n",
+    ")\n",
     "\n",
     "# train model on each combination of model type and feature type\n",
     "for model_type in model_types:\n",
@@ -554,25 +576,7 @@
     "            for column in X.T:\n",
     "                np.random.shuffle(column)\n",
     "\n",
-    "        # create stratified data sets for k-fold cross validation\n",
-    "        straified_k_folds = StratifiedKFold(n_splits=10, shuffle=False)\n",
-    "\n",
-    "        # create logistic regression model with following parameters\n",
-    "        log_reg_model = LogisticRegression(\n",
-    "            penalty=\"elasticnet\", solver=\"saga\", max_iter=100, n_jobs=-1, random_state=0\n",
-    "        )\n",
-    "\n",
-    "        # hypertune parameters with GridSearchCV\n",
-    "        parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
-    "        print(f\"Parameters being tested: {parameters}\")\n",
-    "        grid_search_cv = GridSearchCV(\n",
-    "            log_reg_model,\n",
-    "            parameters,\n",
-    "            cv=straified_k_folds,\n",
-    "            n_jobs=-1,\n",
-    "            scoring=\"f1_weighted\",\n",
-    "        )\n",
-    "\n",
+    "        # fit grid search cv to X and y data\n",
     "        # capture convergence warning from sklearn\n",
     "        # this warning does not affect the model but takes up lots of space in the output\n",
     "        with parallel_backend(\"multiprocessing\"):\n",
