--- a/2.train_model/train_model.ipynb
+++ b/2.train_model/train_model.ipynb
@@ -498,39 +498,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Parameters being tested during grid search: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
+      "\n",
       "Training final model on CP features...\n",
       "X has shape (2432, 165), y has shape (2432,)\n",
-      "Parameters being tested: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
       "Best parameters: {'C': 1.0, 'l1_ratio': 0.30000000000000004}\n",
       "Score of best estimator: 0.8160827228903825\n",
       "\n",
       "Training final model on DP features...\n",
       "X has shape (2432, 1280), y has shape (2432,)\n",
-      "Parameters being tested: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
       "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
       "Score of best estimator: 0.7383705853823289\n",
       "\n",
       "Training final model on CP_and_DP features...\n",
       "X has shape (2432, 1445), y has shape (2432,)\n",
-      "Parameters being tested: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
       "Best parameters: {'C': 0.1, 'l1_ratio': 0.30000000000000004}\n",
       "Score of best estimator: 0.8356118079369516\n",
       "\n",
       "Training shuffled_baseline model on CP features...\n",
       "X has shape (2432, 165), y has shape (2432,)\n",
-      "Parameters being tested: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
       "Best parameters: {'C': 0.01, 'l1_ratio': 0.0}\n",
       "Score of best estimator: 0.10215136994867735\n",
       "\n",
       "Training shuffled_baseline model on DP features...\n",
       "X has shape (2432, 1280), y has shape (2432,)\n",
-      "Parameters being tested: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
       "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
       "Score of best estimator: 0.0943542807030858\n",
       "\n",
       "Training shuffled_baseline model on CP_and_DP features...\n",
       "X has shape (2432, 1445), y has shape (2432,)\n",
-      "Parameters being tested: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
       "Best parameters: {'C': 0.1, 'l1_ratio': 0.9}\n",
       "Score of best estimator: 0.09320506604460571\n",
       "\n"
