refactor model predictions

--- a/3.evaluate_model/get_model_predictions.ipynb
+++ b/3.evaluate_model/get_model_predictions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load features data from indexes and features dataframe\n",
     "data_split_path = pathlib.Path(\"../1.split_data/indexes/data_split_indexes.tsv\")\n",
     "data_split_indexes = pd.read_csv(data_split_path, sep=\"\\t\", index_col=0)\n",
-    "features_dataframe_path = pathlib.Path(\"../0.download_data/data/training_data.csv.gz\")\n",
+    "features_dataframe_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
     "features_dataframe = get_features_data(features_dataframe_path)"
    ]
   },
@@ -55,17 +55,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting predictions for model on dataset test\n",
-      "Getting predictions for model on dataset train\n",
-      "Getting predictions for shuffled_baseline_model on dataset test\n",
-      "Getting predictions for shuffled_baseline_model on dataset train\n"
+      "Getting predictions for model: final, trained with features: CP, on dataset: train\n",
+      "Getting predictions for model: final, trained with features: CP, on dataset: test\n",
+      "Getting predictions for model: final, trained with features: CP_and_DP, on dataset: train\n",
+      "Getting predictions for model: final, trained with features: CP_and_DP, on dataset: test\n",
+      "Getting predictions for model: final, trained with features: DP, on dataset: train\n",
+      "Getting predictions for model: final, trained with features: DP, on dataset: test\n",
+      "Getting predictions for model: shuffled_baseline, trained with features: CP, on dataset: train\n",
+      "Getting predictions for model: shuffled_baseline, trained with features: CP, on dataset: test\n",
+      "Getting predictions for model: shuffled_baseline, trained with features: CP_and_DP, on dataset: train\n",
+      "Getting predictions for model: shuffled_baseline, trained with features: CP_and_DP, on dataset: test\n",
+      "Getting predictions for model: shuffled_baseline, trained with features: DP, on dataset: train\n",
+      "Getting predictions for model: shuffled_baseline, trained with features: DP, on dataset: test\n"
      ]
     }
    ],
@@ -77,25 +85,29 @@
     "compiled_predictions = []\n",
     "\n",
     "# iterate through each model (final model, shuffled baseline model, etc)\n",
-    "for model_path in models_dir.iterdir():\n",
+    "for model_path in sorted(models_dir.iterdir()):\n",
     "    model = load(model_path)\n",
-    "    model_name = model_path.name.replace(\"log_reg_\", \"\").replace(\".joblib\", \"\")\n",
+    "    # determine model/feature type from model file name\n",
+    "    model_type = model_path.name.split(\"__\")[0]\n",
+    "    feature_type = model_path.name.split(\"__\")[1].replace(\".joblib\",\"\")\n",
     "\n",
     "    # iterate through label datasets (labels correspond to train, test, etc)\n",
     "    # with nested for loops, we test each model on each dataset(corresponding to a label)\n",
     "    for label in data_split_indexes[\"label\"].unique():\n",
-    "        print(f\"Getting predictions for {model_name} on dataset {label}\")\n",
+    "        print(\n",
+    "            f\"Getting predictions for model: {model_type}, trained with features: {feature_type}, on dataset: {label}\"\n",
+    "        )\n",
     "\n",
     "        # get indexes of each cell being predicted for the dataset the cell is from\n",
     "        dataset_indexes = data_split_indexes.loc[data_split_indexes[\"label\"] == label][\n",
-    "            \"index\"\n",
+    "            \"labeled_data_index\"\n",
     "        ]\n",
     "\n",
     "        # load dataset (train, test, etc)\n",
     "        data = get_dataset(features_dataframe, data_split_indexes, label)\n",
     "\n",
     "        # get features and labels dataframes\n",
-    "        X, y = get_X_y_data(data)\n",
+    "        X, y = get_X_y_data(data, feature_type)\n",
     "\n",
     "        # get predictions from model\n",
     "        y_pred = model.predict(X)\n",
@@ -110,7 +122,8 @@
     "                \"Phenotypic_Class_Predicted\": y,\n",
     "                \"Phenotypic_Class_True\": y_pred,\n",
     "                \"data_split\": label,\n",
-    "                \"shuffled\": \"shuffled\" in model_name,\n",
+    "                \"shuffled\": \"shuffled\" in model_type,\n",
+    "                \"feature_type\": feature_type\n",
     "            }\n",
     "        )\n",
     "\n",
@@ -126,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -155,48 +168,54 @@
        "      <th>Phenotypic_Class_True</th>\n",
        "      <th>data_split</th>\n",
        "      <th>shuffled</th>\n",
+       "      <th>feature_type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1785</td>\n",
-       "      <td>Polylobed</td>\n",
-       "      <td>Polylobed</td>\n",
-       "      <td>test</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Interphase</td>\n",
+       "      <td>Interphase</td>\n",
+       "      <td>train</td>\n",
        "      <td>False</td>\n",
+       "      <td>CP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4524</td>\n",
-       "      <td>Polylobed</td>\n",
-       "      <td>Polylobed</td>\n",
-       "      <td>test</td>\n",
+       "      <td>1</td>\n",
+       "      <td>OutOfFocus</td>\n",
+       "      <td>OutOfFocus</td>\n",
+       "      <td>train</td>\n",
        "      <td>False</td>\n",
+       "      <td>CP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1045</td>\n",
-       "      <td>OutOfFocus</td>\n",
-       "      <td>OutOfFocus</td>\n",
-       "      <td>test</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Apoptosis</td>\n",
+       "      <td>Apoptosis</td>\n",
+       "      <td>train</td>\n",
        "      <td>False</td>\n",
+       "      <td>CP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1046</td>\n",
-       "      <td>Polylobed</td>\n",
-       "      <td>Polylobed</td>\n",
-       "      <td>test</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Interphase</td>\n",
+       "      <td>Interphase</td>\n",
+       "      <td>train</td>\n",
        "      <td>False</td>\n",
+       "      <td>CP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3474</td>\n",
-       "      <td>Artefact</td>\n",
-       "      <td>Binuclear</td>\n",
-       "      <td>test</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Prometaphase</td>\n",
+       "      <td>Prometaphase</td>\n",
+       "      <td>train</td>\n",
        "      <td>False</td>\n",
+       "      <td>CP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -205,83 +224,89 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10915</th>\n",
-       "      <td>5518</td>\n",
-       "      <td>Apoptosis</td>\n",
+       "      <th>17167</th>\n",
+       "      <td>2896</td>\n",
+       "      <td>Hole</td>\n",
        "      <td>Polylobed</td>\n",
-       "      <td>train</td>\n",
+       "      <td>test</td>\n",
        "      <td>True</td>\n",
+       "      <td>DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10916</th>\n",
-       "      <td>5519</td>\n",
+       "      <th>17168</th>\n",
+       "      <td>2897</td>\n",
+       "      <td>ADCCM</td>\n",
+       "      <td>Binuclear</td>\n",
+       "      <td>test</td>\n",
+       "      <td>True</td>\n",
+       "      <td>DP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17169</th>\n",
+       "      <td>2898</td>\n",
+       "      <td>Interphase</td>\n",
+       "      <td>Large</td>\n",
+       "      <td>test</td>\n",
+       "      <td>True</td>\n",
+       "      <td>DP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17170</th>\n",
+       "      <td>2908</td>\n",
        "      <td>Prometaphase</td>\n",
-       "      <td>Polylobed</td>\n",
-       "      <td>train</td>\n",
+       "      <td>Interphase</td>\n",
+       "      <td>test</td>\n",
        "      <td>True</td>\n",
+       "      <td>DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10917</th>\n",
-       "      <td>5520</td>\n",
-       "      <td>Binuclear</td>\n",
-       "      <td>Polylobed</td>\n",
-       "      <td>train</td>\n",
+       "      <th>17171</th>\n",
+       "      <td>2909</td>\n",
+       "      <td>Apoptosis</td>\n",
+       "      <td>Interphase</td>\n",
+       "      <td>test</td>\n",
        "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10918</th>\n",
-       "      <td>5521</td>\n",
-       "      <td>Polylobed</td>\n",
-       "      <td>Grape</td>\n",
-       "      <td>train</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10919</th>\n",
-       "      <td>5522</td>\n",
-       "      <td>Binuclear</td>\n",
-       "      <td>Polylobed</td>\n",
-       "      <td>train</td>\n",
-       "      <td>True</td>\n",
+       "      <td>DP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10920 rows × 5 columns</p>\n",
+       "<p>17172 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       Dataset_Index Phenotypic_Class_Predicted Phenotypic_Class_True  \\\n",
-       "0               1785                  Polylobed             Polylobed   \n",
-       "1               4524                  Polylobed             Polylobed   \n",
-       "2               1045                 OutOfFocus            OutOfFocus   \n",
-       "3               1046                  Polylobed             Polylobed   \n",
-       "4               3474                   Artefact             Binuclear   \n",
+       "0                  0                 Interphase            Interphase   \n",
+       "1                  1                 OutOfFocus            OutOfFocus   \n",
+       "2                  2                  Apoptosis             Apoptosis   \n",
+       "3                  3                 Interphase            Interphase   \n",
+       "4                  4               Prometaphase          Prometaphase   \n",
        "...              ...                        ...                   ...   \n",
-       "10915           5518                  Apoptosis             Polylobed   \n",
-       "10916           5519               Prometaphase             Polylobed   \n",
-       "10917           5520                  Binuclear             Polylobed   \n",
-       "10918           5521                  Polylobed                 Grape   \n",
-       "10919           5522                  Binuclear             Polylobed   \n",
+       "17167           2896                       Hole             Polylobed   \n",
+       "17168           2897                      ADCCM             Binuclear   \n",
+       "17169           2898                 Interphase                 Large   \n",
+       "17170           2908               Prometaphase            Interphase   \n",
+       "17171           2909                  Apoptosis            Interphase   \n",
        "\n",
-       "      data_split  shuffled  \n",
-       "0           test     False  \n",
-       "1           test     False  \n",
-       "2           test     False  \n",
-       "3           test     False  \n",
-       "4           test     False  \n",
-       "...          ...       ...  \n",
-       "10915      train      True  \n",
-       "10916      train      True  \n",
-       "10917      train      True  \n",
-       "10918      train      True  \n",
-       "10919      train      True  \n",
+       "      data_split  shuffled feature_type  \n",
+       "0          train     False           CP  \n",
+       "1          train     False           CP  \n",
+       "2          train     False           CP  \n",
+       "3          train     False           CP  \n",
+       "4          train     False           CP  \n",
+       "...          ...       ...          ...  \n",
+       "17167       test      True           DP  \n",
+       "17168       test      True           DP  \n",
+       "17169       test      True           DP  \n",
+       "17170       test      True           DP  \n",
+       "17171       test      True           DP  \n",
        "\n",
-       "[10920 rows x 5 columns]"
+       "[17172 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
